// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "default",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mode: alternate - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.mode: alternate",
      "mode": "alternate",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mode: left - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.mode: left",
      "mode": "left",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mode: right - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.mode: right",
      "mode": "right",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.pending: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.pending: true",
      "pending": true,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.pendingDotIcon:  - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.pendingDotIcon: ",
      "pending": true,
      "pendingDot": <IconBlock
        blockId="properties.pendingDotIcon: _pendingDotIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  Array [
                    Object {
                      "padding": "5px 0px 0px 5px",
                    },
                    undefined,
                  ],
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                },
              ],
            },
            "moveItemDown": [Function],
            "moveItemUp": [Function],
            "pushItem": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "removeItem": [Function],
            "triggerEvent": [Function],
            "unshiftItem": [Function],
          }
        }
        properties={
          Object {
            "style": Object {
              "fontSize": 16,
            },
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.reverse: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.reverse: true",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": true,
    },
    Object {},
  ],
]
`;
